# app/Http/Controllers/Controller.php
@@ -8,37 +8,31 @@ use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 
 /**
- * @OA\Info(
- *      version="1.0.0",
- *      title="L5 OpenApi",
- *      description="L5 Swagger OpenApi description",
- *      @OA\Contact(
- *          email="umar1997mengliyev@gmail.com"
- *      ),
- *     @OA\License(
- *         name="Apache 2.0",
- *         url="http://www.apache.org/licenses/LICENSE-2.0.html"
- *     )
- * )
- */
+     * @OA\Info(
+     *      version="1.0.0",
+     *      title="L5 OpenApi",
+     *      description="L5 Swagger OpenApi learn",
+     *      @OA\Contact(
+     *          email="umar1997mengliyev@gmail.com"
+     *      ),
+     *     @OA\License(
+     *         name="Apache 2.0",
+     *         url="http://www.apache.org/licenses/LICENSE-2.0.html"
+     *     )
+     * )
+     * @OA\Server(
+     *  url="http://modul-laravel/api"
+     * )
+     * @OA\SecurityScheme(
+     *   securityScheme="bearerAuth",
+     *   in="header",
+     *   name="Authorization",
+     *   type="http",
+     *   scheme="bearer",
+     *   bearerFormat="JWT",
+     * ),
+**/
 
- /**
- * @OA\SecurityScheme(
- *     type="oauth2",
- *     description="Use a global client_id / client_secret and your username / password combo to obtain a token",
- *     name="Password Based",
- *     in="header",
- *     scheme="https",
- *     securityScheme="Password Based",
- *     @OA\Flow(
- *         flow="password",
- *         authorizationUrl="/oauth/authorize",
- *         tokenUrl="/oauth/token",
- *         refreshUrl="/oauth/token/refresh",
- *         scopes={}
- *     )
- * )
- */
 class Controller extends BaseController
 {
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
